--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,107 +1,115 @@
-.main-menu {
+.main-menu{
   z-index: 10;
 }
 
 .navigation:hover {
   background-color: #566769;
 }
-
 .send {
   background-color: #39b24b;
   border: 0;
 }
-
 .send:hover {
   background-color: #288035;
 }
-
 ul {
   list-style-type: "-  ";
 }
 
-ol li span.header {
+ol li span.header{
   text-decoration: underline;
   font-weight: 600;
 }
 
-.response {
+.response
+{
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
 
-table {
+table{
   width: 100%;
   table-layout: fixed;
 }
 
 .response-cell {
-  width: 50%;
-  /* You can adjust the value as needed */
+  width: 50%; /* You can adjust the value as needed */
 }
 
 /* Send Tab button */
-#nav-send-tab[aria-selected=false] {
+#nav-send-tab[aria-selected=false]
+{
   background-color: transparent;
   color: #31AEF2;
 }
 
-#nav-send-tab[aria-selected=true] {
+#nav-send-tab[aria-selected=true]
+{
   background-color: #31AEF2;
   color: white;
   font-weight: 600;
 }
 
 /* History Tab button */
-#nav-history-tab[aria-selected=false] {
+#nav-history-tab[aria-selected=false]
+{
   background-color: transparent;
   color: #FFC20D;
 }
 
-#nav-history-tab[aria-selected=true] {
+#nav-history-tab[aria-selected=true]
+{
   background-color: #FFC20D;
   color: white;
   font-weight: 600;
 }
 
 /* Data Tab button */
-#nav-data-tab[aria-selected=false] {
+#nav-data-tab[aria-selected=false]
+{
   background-color: transparent;
   color: #6A9955;
 }
 
-#nav-data-tab[aria-selected=true] {
+#nav-data-tab[aria-selected=true]
+{
   background-color: #6A9955;
   color: white;
   font-weight: 600;
 }
 
 /* IMAP Tab button */
-#nav-imap-tab[aria-selected=false] {
+#nav-imap-tab[aria-selected=false]
+{
   background-color: transparent;
-  color: #DC3545;
+  color:#DC3545;
 }
 
-#nav-imap-tab[aria-selected=true] {
-  background-color: #DC3545;
+#nav-imap-tab[aria-selected=true]
+{
+  background-color:#DC3545;
   color: white;
   font-weight: 600;
 }
 
-button[aria-selected=false]:hover {
+button[aria-selected=false]:hover
+{
   color: gray;
 }
 
-button[aria-selected=true] {
+button[aria-selected=true]
+{
   color: white;
   font-weight: 600;
 }
 
-.nav-link {
+.nav-link{
   padding-inline: 2rem;
 }
 
-.refresh-dropbox {
+.refresh-dropbox
+{
   background-color: #0062FF;
 }
 
@@ -110,18 +118,19 @@ button[aria-selected=true] {
   color: #595C5F;
 }
 
-.random-divs {
+.random-divs{
   overflow: auto;
   max-height: 134px;
 }
 
-.properties {
+.properties{
   resize: none;
   white-space: nowrap;
   overflow: hidden;
 }
 
-.token {
+.token
+{
   background-color: #D7D7D7;
   width: fit-content;
   padding-block: 4px;
@@ -133,101 +142,18 @@ button[aria-selected=true] {
   font-size: 0.85rem;
 }
 
-.tokenButton {
+.tokenButton
+{
   border: 0;
   background-color: transparent;
   margin-top: -2px;
 }
 
-.removeCreative {
+.removeCreative{
   width: 44px;
   height: 41px;
   position: absolute;
   width: fit-content;
   right: 0px;
   padding-right: 0;
-}
-
-.drop-zone {
-  background-color: white;
-}
-
-.drag-over {
-  background-color: #cef0db;
-}
-
-.childElements {
-  pointer-events: none;
-}
-
-#uploadButton {
-  pointer-events: unset;
-}
-
-.dataEntry {
-  cursor: pointer;
-  padding: 0.75rem;
-  margin: 0.25rem;
-  border-radius: 10px;
-}
-
-.dataEntry[data-selected=true] {
-  background-color: #BFD0FC;
-  color: #1F3487;
-  border: #1F3487 1.5px solid;
-}
-
-.dataEntry[data-selected=false] {
-  background-color: white;
-  color: #262431;
-  border: #5C5E6B 1.5px solid;
-}
-
-.dataEntry[data-selected=false]:hover {
-  background-color: #E2EAFE;
-}
-
-.loadRecipientBtnContainer {
-  visibility: hidden;
-}
-
-.dataEntry:hover>.loadRecipientBtnContainer {
-  visibility: visible;
-}
-
-.dataInfos {
-  user-select: none;
-  /* display: flex;
-  flex-direction: column;
-  gap: 0.5rem; */
-}
-
-.loadRecipientBtn {
-  color: #1F3487;
-}
-
-.loadRecipientBtn:hover {
-  background-color: #BFD0FC;
-}
-
-.loadRecipientBtn:active {
-  color: white;
-  background-color: #769AFA;
-}
-
-.btn.loadRecipientBtn:first-child:active {
-  color: white;
-  background-color: #769AFA;
-}
-
-.dataEntry[data-selected=true]>div>.loadRecipientBtn:hover {
-  background-color: #769AFA;
-}
-
-.dataEntry[data-selected=true]>div>.loadRecipientBtn:active {
-  background-color: #3F72F8;
-}
-
-.dataEntry[data-selected=true]>div>.btn.loadRecipientBtn:first-child:active {
-  background-color: #3F72F8;
 }
